<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/my_dark_blue"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="32dp"
            android:text="@string/app_name"
            android:textColor="@color/my_light_brown"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            style="@style/SubTitles"
            android:text="@string/categories" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_Categories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <TextView
            style="@style/SubTitles"
            android:text="@string/task" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_Task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="30dp"/>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_AddTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="75dp"
        android:contentDescription="x"
        android:src="@android:drawable/ic_input_add"
        app:backgroundTint="@color/my_orange"
        app:fabSize="normal"
        app:tint="@color/white" />

</FrameLayout>